## DEFAULT directory makefile.

##	Don't forget to find ways to implement Graphics and Parallel

AUTOMAKE_OPTIONS = foreign

DIRECTORY	= Matlab
M_files		= DataXAxis.m genFileName.m isAFile.m Read16Bits.m Read32Bits.m \
				ReadAIFF.m ReadBytes.m ReadIEEE.m ReadSNDChunk.m \
				ReadWinFrame.m rmParInStr.m	runDSAM.m runSpeechDemoAMS.m \
				slash4OS.m str2FileName.m

EXTRA_DIST	= $(M_files)

include $(top_srcdir)/mkunxinst.env
