## DEFAULT directory makefile.

##	Don't forget to find ways to implement Graphics and Parallel

AUTOMAKE_OPTIONS = foreign

DIRECTORY	= Matlab
M_files		= DataXAxis.m Read16Bits.m Read32Bits.m ReadAIFF.m ReadBytes.m \
				ReadIEEE.m ReadSNDChunk.m ReadWinFrame.m

EXTRA_DIST	= $(M_files)

include $(top_srcdir)/mkunxinst.env
