## Octave directory makefile.

##	Don't forget to find ways to implement Graphics and Parallel

AUTOMAKE_OPTIONS = foreign

DIRECTORY	= Octave
M_files		= ReadAIFF.m ReadIEEE.m Read16Bits.m Read32Bits.m ReadBytes.m \
				ReadSNDChunk.m ReadWinFrame.m BitAnd.m CalcXScale.m DataXAxis.m

EXTRA_DIST	= $(M_files)

include $(top_srcdir)/mkunxinst.env
