## Tutorials directory makefile.

##	Don't forget to find ways to implement Graphics and Parallel

AUTOMAKE_OPTIONS = foreign

DIRECTORY	= Tutorials
SUBDIRS		= AuditoryPeriphery Autocorrelation BinauralPitch DRNLinputOutput \
				GenerateStimulus ImpulseResponse Loudness MATLABdemo \
				MeasureIntensity PreemphasisFilter

EXTRA_DIST	= AMStutorialNotes.doc

include $(top_srcdir)/mkunxinst.env
