## Tutorials directory makefile.

##	Don't forget to find ways to implement Graphics and Parallel

AUTOMAKE_OPTIONS = foreign

DIRECTORY	= Tutorials
SUBDIRS		= AuditoryPeriphery Autocorrelation BinauralPitch DRNLinputOutput \
				GenerateStimulus ImpulseResponse Loudness MATLABRunDSAMSim \
				MeasureIntensity Pre-emphasisFilter Precedence

EXTRA_DIST	=

include $(top_srcdir)/mkunxinst.env
