## DEFAULT directory makefile.

##	Don't forget to find ways to implement Graphics and Parallel

AUTOMAKE_OPTIONS = foreign

DIRECTORY	= Matlab
M_files		= DataXAxis.m aimMatPaths.mat isAFile.m runDSAM.m str2FileName.m \
				runSpeechDemoAMS.m genFileName.m rmParInStr.m slash4OS.m

EXTRA_DIST	= $(M_files)

include $(top_srcdir)/mkunxinst.env
