## Tutorials directory makefile.

##	Don't forget to find ways to implement Graphics and Parallel

AUTOMAKE_OPTIONS = foreign

DIRECTORY	= Tutorials
SUBDIRS		= AuditoryPeriphery Autocorrelation BinauralPitch DRNLinputOutput \
				GenerateStimulus ImpulseResponse Loudness MeasureIntensity \
				Pre-emphasisFilter Precedence ANFibreModels \
				AuditoryNerve

EXTRA_DIST	= SAMSTutorials.doc

include $(top_srcdir)/mkunxinst.env
